data/all_generated_tests/raw_wast_tests/nop_UnreachableCodeExecution_216.wast
;; 7. **Test 7**:     - Description: Utilize data segment initialization with `nop` instructions utilized right before an `unreachable` data access to find if `nop` affects memory initialization leading to incorrect `unreachable` execution.    - Constraint: Ensuring `nop` does not produce memory initialization inconsistencies resulting in control flow misdirection.

(assert_invalid
  (module
    (memory 1)
    (data (i32.const 0) "\01")
    (func $test
      (nop)
      (unreachable)
    )
  )
  "elements out of bounds"
)